[gd_scene load_steps=2 format=3 uid="uid://dtfxusuxjmcsy"]

[ext_resource type="Script" uid="uid://ca8frkyxoem7n" path="res://gui/inline_editors/name_inline_editor.gd" id="1_4sxsm"]

[node name="NameInlineEditor" type="Panel"]
offset_right = 59.125
offset_bottom = 30.0
script = ExtResource("1_4sxsm")
metadata/_custom_type_script = "uid://ca8frkyxoem7n"

[node name="LabelEditField" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 118.0
offset_bottom = 30.0
alignment = 1

[connection signal="focus_exited" from="LabelEditField" to="." method="_on_focus_exited"]
[connection signal="text_changed" from="LabelEditField" to="." method="_on_text_changed"]
[connection signal="text_submitted" from="LabelEditField" to="." method="_on_text_submitted"]
